# detectPaperLLM

./: .dockerignore  .gitignore  DetectAnyLLM.md  MIGRATION.md  MODELSCOPE_README.md  README.md  dc_stats.csv  ddl_finetune.py  pyproject.toml  requirements.txt
configs/: accelerate_cuda.yaml  qwen3_lora_mps.env
data/: human_ref.sample.jsonl  human_texts.sample.jsonl  infer.sample.jsonl  machine_ref.sample.jsonl  train_pairs.example.jsonl  train_pairs.sample.jsonl  train_pairs_merged.jsonl  train_pairs_merged_v2.jsonl
data/splits/: dev.jsonl  test.jsonl  train.jsonl
data/splits_v2/: dev.jsonl  test.jsonl  train.jsonl
depoly-pytorch/: GPU-machine.ini  MODEL-info.md  ecosystem.config.js  inference.py  model_loader.py  pm2_setup.sh  reference.py  requirements.txt  serve.py  server-README.md  start.sh
detectPaperLLM-java-client/: dc_stats.csv  find_best_threshold.py  pom.xml
detectPaperLLM-java-client/eval_api_dev_test/: detailed_metrics.json  dev_scores.jsonl  risk_thresholds_2tier.json  test_scores.jsonl
docs/: TRAINING_QUICK_REFERENCE.md  阿里云容器操作方法.txt
scripts/: merge_human_machine_pairs.py  merge_qwen3_4b_lora.sh  prepare_paper_data.py  run_qwen3_lora_example.sh  run_qwen3_ref_and_infer_example.sh  setup_qwen3_lora.sh  start_train_merged.sh
src/detectanyllm/: cli.py  (+2 more)
tests/: conftest.py  test_classification_metrics.py  test_cli_integration.py  test_compat_entrypoint.py  test_group_split.py  test_math_discrepancy_and_loss.py  test_random_split.py  test_reference_clustering.py  test_resampling.py  test_serve.py  test_serve_pytorch.py  test_training_smoke.py
(+24 files in other folders)
